# kenai-learnbsp

./: CMakeLists.txt
BasicGame/: Game.cpp  Game.h  Makefile  Plugin.cpp  Plugin.h
BasicGame/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Basics/: Breakable.cpp  Breakable.h  Illusionary.cpp  Illusionary.h  Makefile  Plugin.cpp  Plugin.h  ShadedObject.cpp  ShadedObject.h  Wall.cpp  Wall.h  WorldSpawn.cpp  WorldSpawn.h
Basics/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
BspPlugin/: BspMesh.cpp  BspMesh.h  BspObject.cpp  BspObject.h  BspPlugin.cpp  BspPlugin.h  BspPluginContext.cpp  BspPluginContext.h  opengl.h
BspPlugin/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
LearnBSP/: Application.cpp  Application.h  BspCollision.cpp  BspCollision.h  BspData.cpp  BspData.h  BspEntity.cpp  BspEntity.h  BspFace.cpp  BspFace.h  BspGeometry.cpp  BspGeometry.h  BspLeaf.cpp  BspLeaf.h  BspLoader.cpp  BspLoader.h  BspMesh.cpp  BspMesh.h  BspModel.cpp  BspModel.h  BspNode.cpp  BspNode.h  BspObject.cpp  BspObject.h  BspProp.cpp  BspProp.h  BspWorld.cpp  BspWorld.h  CMakeLists.txt  Collision.cpp  Collision.h  Console.cpp  Console.h  FreeTypeFont.cpp  FreeTypeFont.h  HlBspData.cpp  HlBspData.h  HlBspWorld.cpp  HlBspWorld.h  PluginContext.cpp  (+21 more)
LearnBSP/common/: boundingbox.cpp  boundingbox.h  camera.cpp  camera.h  common.cpp  common.h  data.cpp  data.h  font.cpp  font.h  indexarray.h  math3d.cpp  math3d.h  opengl.h  plane.cpp  plane.h  renderoperations.cpp  renderoperations.h  stringfunctions.cpp  stringfunctions.h  texture.cpp  texture.h  thread.cpp  thread.h  tokenizer.cpp  tokenizer.h  vector3.cpp  vector3.h
LearnBSP/data/: cs_estate.entities
LearnBSP/fs/: File.cpp  File.h  FileSystem.cpp  FileSystem.h  FileSystemException.cpp  FileSystemException.h  Package.cpp  Package.h  Resource.cpp  Resource.h  WadPackage.cpp  WadPackage.h  ZipPackage.cpp  ZipPackage.h
LearnBSP/fs/image/: bitmap.cpp  image.h  jpeg.cpp  miptex.cpp  png.cpp  targa.cpp  texture.cpp  texture.h
LearnBSP/fs/mesh/: Mdl.cpp  Mdl.h  Mesh.cpp  Mesh.h  mdltypes.h
LearnBSP/fs/mesh/hlsdk/: cmdlib.c  cmdlib.h  mdlviewer.h  studio.h  studio_render.cpp  studio_utils.cpp
LearnBSP/nbproject/: Makefile-impl.mk  Makefile-linuxDebug.mk  Makefile-linuxRelease.mk  Makefile-variables.mk  Makefile-win32Debug.mk  Makefile-win32Release.mk  Package-linuxDebug.bash  Package-linuxRelease.bash  Package-win32Debug.bash  Package-win32Release.bash  configurations.xml  project.xml
